# sklearn-popsregression

./: .coveragerc  .gitignore  ISSUE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-gh-pages.yml  lint.yml  publish.yml  python-app.yml
doc/: Makefile  api.rst  conf.py  index.rst  make.bat  quick_start.rst  user_guide.rst
examples/: plot_classifier.py  plot_pops_regression.py  plot_template.py  plot_transformer.py
popsregression/: __init__.py  _pops.py
popsregression/tests/: test_common.py  test_pops.py
popsregression/utils/: discovery.py
popsregression/utils/tests/: test_discovery.py
skltemplate/: _template.py
skltemplate/tests/: test_common.py  test_template.py
skltemplate/utils/: discovery.py
skltemplate/utils/tests/: test_discovery.py
